; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_hub.c_tegra_windowgroup_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_hub.c_tegra_windowgroup_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_windowgroup = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [44 x i8] c"failed to assert reset for window group %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tegra_windowgroup*)* @tegra_windowgroup_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tegra_windowgroup_disable(%struct.tegra_windowgroup* %0) #0 {
  %2 = alloca %struct.tegra_windowgroup*, align 8
  %3 = alloca i32, align 4
  store %struct.tegra_windowgroup* %0, %struct.tegra_windowgroup** %2, align 8
  %4 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %5 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %4, i32 0, i32 1
  %6 = call i32 @mutex_lock(i32* %5)
  %7 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %8 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %11, label %28

11:                                               ; preds = %1
  %12 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %13 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @reset_control_assert(i32 %14)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %11
  %19 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %20 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @pr_err(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %18, %11
  %24 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %25 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @pm_runtime_put(i32 %26)
  br label %28

28:                                               ; preds = %23, %1
  %29 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %30 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, -1
  store i32 %32, i32* %30, align 4
  %33 = load %struct.tegra_windowgroup*, %struct.tegra_windowgroup** %2, align 8
  %34 = getelementptr inbounds %struct.tegra_windowgroup, %struct.tegra_windowgroup* %33, i32 0, i32 1
  %35 = call i32 @mutex_unlock(i32* %34)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @reset_control_assert(i32) #1

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i32 @pm_runtime_put(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
